--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" id="temp" src="assets/v1.JPG" alt="First slide">
+            <img class="d-block w-100" id="temp" src="assets/v1.jpg" alt="First slide">
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" id="temp2" src="assets/v2.JPG" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100"  src="assets/v3.JPG" alt="Third slide">
+            <img class="d-block w-100"  src="assets/v3.jpg" alt="Third slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
